--- a/api-fe/src/app/components/usuario/usuario-edit/usuario-edit.component.html
+++ b/api-fe/src/app/components/usuario/usuario-edit/usuario-edit.component.html
@@ -56,6 +56,7 @@
             <span style="color: red;" *ngIf="cpfValidate.invalid"> *</span>
             <input
               type="text"
+              mask="000.000.000-00||00.000.000/0000-00"
               required
               #cpfValidate="ngModel"
               [(ngModel)]="cdUsuario.cpf"
@@ -157,6 +158,7 @@
           <div class="col-md-3">
             <input
               type="text"
+              mask="(00) 0.0000-0000"
               [(ngModel)]="telefone.numero"
               name="numero"
               id="numero"
