--- a/api-fe/src/app/components/usuario/usuario.component.html
+++ b/api-fe/src/app/components/usuario/usuario.component.html
@@ -41,7 +41,7 @@
   <div class="col-md-12 text-center">
     <pagination-controls
       [responsive]="true"
-      (pageChange)="listarPagina(currentPage = $event)"
+      (pageChange)="listar(currentPage = $event)"
       previousLabel=""
       nextLabel=""
     ></pagination-controls>
